--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,12 @@
 {
   "hosting": {
     "public": ".",
+    "rewrites": [
+      {
+        "source": "/blog.html",
+        "destination": "/blog.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
